--- a/src/financiera/credito/SolicitarCreditoView.form
+++ b/src/financiera/credito/SolicitarCreditoView.form
@@ -6,6 +6,7 @@
     </Component>
   </NonVisualComponents>
   <Properties>
+    <Property name="closable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Financiera"/>
   </Properties>
   <SyntheticProperties>
@@ -141,6 +142,8 @@
                                   <Component id="fdDni" min="-2" pref="100" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="btnBuscarCliente" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                                  <Component id="txtLoading" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -195,6 +198,7 @@
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="fdDni" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnBuscarCliente" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtLoading" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
@@ -318,6 +322,11 @@
               <Font name="Tahoma" size="11" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="_____________________"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="txtLoading">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Cargando..."/>
           </Properties>
         </Component>
       </SubComponents>
@@ -456,6 +465,7 @@
               <ComponentRef name="radioGroupModalidad"/>
             </Property>
             <Property name="text" type="java.lang.String" value="1&#xba; Cuota Adelantada"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel17">
@@ -464,6 +474,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="fdPorcentajeMensual">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fdPorcentajeMensualActionPerformed"/>
           </Events>
@@ -474,6 +487,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="fdPorcentajeGastos">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel19">
           <Properties>
@@ -495,6 +511,7 @@
               <ComponentRef name="radioGroupModalidad"/>
             </Property>
             <Property name="text" type="java.lang.String" value="1&#xba; Cuota Vencida"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnCalcularDetalles">
@@ -520,7 +537,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/financiera/resources/cancel.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Cancelar"/>
+        <Property name="text" type="java.lang.String" value="Cerrar"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCanelarActionPerformed"/>
@@ -553,7 +570,7 @@
                       <Component id="txtImporteCuota" min="-2" max="-2" attributes="0"/>
                       <Component id="txtMontoTotal" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="37" max="32767" attributes="0"/>
+                  <EmptySpace pref="25" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -593,6 +610,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="txtMontoTotal">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="11" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="$___________"/>
           </Properties>
         </Component>
@@ -603,6 +623,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="txtImporteCuota">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="11" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="$___________"/>
           </Properties>
         </Component>
@@ -613,6 +636,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="txtGastos">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="11" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="$___________"/>
           </Properties>
         </Component>
@@ -623,6 +649,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="txtTotalEntregado">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="11" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="$___________"/>
           </Properties>
         </Component>
@@ -634,6 +663,7 @@
           <Image iconType="3" name="/financiera/resources/printer_16.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Imprimir Comprobante"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
   </SubComponents>
